Add React to _head

--- a/source/_meta/_00-head.mustache
+++ b/source/_meta/_00-head.mustache
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
     <link rel="stylesheet" href="../../css/pattern-scaffolding.css?{{ cacheBuster }}" media="all" />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.17.0/babel.min.js"></script>
+    <script src="https://unpkg.com/react@15.3.2/dist/react.min.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.min.js"></script>
+
     <!-- Result CSS and JS -->
     <link rel="stylesheet" href="../../css/custom.css" media="all"  />
     <script src="../../js/gu-react.js"></script>
